# ros

catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/install/include/arbotix_msgs/: Analog.h  Digital.h  EnableRequest.h  EnableResponse.h  RelaxRequest.h  RelaxResponse.h  SetSpeedRequest.h  SetSpeedResponse.h  SetupChannelRequest.h  SetupChannelResponse.h
catkin_ws/install/include/beginner_tutorials/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h  Num.h
catkin_ws/install/lib/beginner_tutorials/: hello_world
catkin_ws/install/lib/pkgconfig/: arbotix_controllers.pc  arbotix_firmware.pc  arbotix_msgs.pc  arbotix_python.pc  arbotix_sensors.pc  beginner_tutorials.pc  my_serial_node.pc  serial.pc
catkin_ws/install/lib/python2.7/dist-packages/: arbotix_python-0.10.0.egg-info  (+1 more)
catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/beginner_tutorials/action/: Fibonacci.action
catkin_ws/src/beginner_tutorials/config/: talker_para.yaml
catkin_ws/src/beginner_tutorials/launch/: boot_talker_para.launch  boot_talker_para_yaml.launch  hello_world.launch
catkin_ws/src/beginner_tutorials/msg/: gps.msg
catkin_ws/src/beginner_tutorials/scripts/: pylistener.py  pytalker.py
catkin_ws/src/beginner_tutorials/srv/: Greeting.srv
catkin_ws/src/my_serial_node/: 1  CMakeLists.txt
catkin_ws/src/my_serial_node/src/: my_serial_receive_node.cpp  my_serial_send_node.cpp
catkin_ws/src/pluginlib_tutorials/: CMakeLists.txt  package.xml
catkin_ws/src/pluginlib_tutorials/src/: polygon_plugins.cpp
(+38 files in other folders)
